--- a/frontend/admin/lanjutan-konseling.html
+++ b/frontend/admin/lanjutan-konseling.html
@@ -8,6 +8,13 @@
   <!-- General CSS Files -->
   <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
   <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.7.2/css/all.css" integrity="sha384-fnmOCqbTlWIlj8LyTjo7mOUStjsKC4pOpQbqyi7RrhN7udi9RwhKkMHpvLbHG9Sr" crossorigin="anonymous">
+  <link rel="stylesheet" href="../../assets/css/daterangpicker.css">
+  <link rel="stylesheet" href="../../assets/css/bootstrap-colorpicker.min.css">
+  <link rel="stylesheet" href="../../assets/css/select2.min.css">
+  <link rel="stylesheet" href="../../assets/css/selectric.css">
+  <link rel="stylesheet" href="../../assets/css/bootstrap-timepicker.min.css">
+  <link rel="stylesheet" href="../../assets/css/bootstrap-taginput.css">
+  <link rel="stylesheet" href="../../assets/css/bootstrap-timepicker.min.css">
 
   <!-- CSS Libraries -->
 
@@ -78,48 +85,23 @@
               <div class="breadcrumb-item">Laporan Konseling</div>
             </div>
           </div>
-
           <div class="section-body">
             <div class="card">
                 <div class="card-header">
-                  <h4>Date &amp; Time Picker</h4>
+                  <h4>Pengaturan Jadwal Konseling</h4>
                 </div>
                 <div class="card-body">
-                  <div class="form-group">
-                    <label class="d-block">Date Range Picker With Button</label>
-                    <a href="javascript:;" class="btn btn-primary daterange-btn icon-left btn-icon"><i class="fas fa-calendar"></i> Choose Date
-                    </a>
-                  </div>
-                  <div class="form-group">
-                    <label>Date Picker</label>
-                    <input type="text" class="form-control datepicker">
-                  </div>
-                  <div class="form-group">
-                    <label>Date Time Picker</label>
-                    <input type="text" class="form-control datetimepicker">
-                  </div>
-                  <div class="form-group">
-                    <label>Date Range Picker</label>
-                    <div class="input-group">
-                      <div class="input-group-prepend">
-                        <div class="input-group-text">
-                          <i class="fas fa-calendar"></i>
-                        </div>
-                      </div>
-                      <input type="text" class="form-control daterange-cus">
+                  <form method="POST" enctype="multipart/form-data">
+                    <div class="form-group">
+                      <label>Jadwal Satu</label>
+                      <input type="text" name="jadwal-satu" id="jadwal-satu" class="form-control datetimepicker">
                     </div>
-                  </div>
-                  <div class="form-group">
-                    <label>Time Picker</label>
-                    <div class="input-group">
-                      <div class="input-group-prepend">
-                        <div class="input-group-text">
-                          <i class="fas fa-clock"></i>
-                        </div>
-                      </div>
-                      <input type="text" class="form-control timepicker">
+                    <div class="form-group">
+                      <label>Jadwal Dua</label>
+                      <input type="text" name="jadwal-dua" id="jadwal-dua" class="form-control datetimepicker">
                     </div>
-                  </div>
+                    <button id="btn-submit" class="btn btn-primary" type="submit">Simpan</button>
+                  </form>
                 </div>
               </div>
           </div>
@@ -142,7 +124,19 @@
   <!-- Template JS File -->
   <script src="../../assets/js/scripts.js"></script>
   <script src="../../assets/js/custom.js"></script>
-  <script type="text/javascript" src="../api/detail-konseling.js"></script>
+  <!-- axios CDN -->
+  <script src="https://cdn.jsdelivr.net/npm/axios/dist/axios.min.js"></script>
+
+  <!-- datetimepicker -->
+  <script src="../../assets/js/bootstrap-timepicker.min.js"></script>
+  <script src="../../assets/js/daterangepicker.js"></script>
+  <!-- <script src="../../assets/js/forms-advanced-forms.js"></script> -->
+  <script src="../../assets/js/bootstrap-colorpicker.min.js"></script>
+  <script src="../../assets/js/bootstrap-timepicker.min.js"></script>
+  <script src="../../assets/js/select2.full.min.js"></script>
+  <script src="../../assets/js/jquery.selectric.min.js"></script>
+  <!-- <script type="text/javascript" src="../api/detail-konseling.js"></script> -->
+  <script type="text/javascript" src="../api/set-waktu-konseling.js"></script>
 
   <!-- Page Specific JS File -->
 </body>
