--- a/frontend/authentication/login.html
+++ b/frontend/authentication/login.html
@@ -34,7 +34,7 @@ The above copyright notice and this permission notice shall be included in all c
         <a href="#!"><img src="../../assets/img/logo.png" alt="" width="100" height="100"></a>
       <h1 class="text-white h3">Konseling</h1>
       </div>
-      <form class="mt-4 needs-validation" id="form-login" method="POST" enctype="multipart/form-data" novalidate="">
+      <form method="POST"  class="mt-4 needs-validation" id="form-login" enctype="multipart/form-data" novalidate="">
         <div class="form-group">
           <div class=" input-group uf-input-group input-group-lg mb-3">
             <span class="input-group-text fa fa-user"></span>
