--- a/frontend/dosen/detail-pengajuan.html
+++ b/frontend/dosen/detail-pengajuan.html
@@ -35,18 +35,12 @@
             <img alt="image" src="../../assets/img/avatar/avatar-1.png" class="rounded-circle mr-1">
             <div class="d-sm-none d-lg-inline-block" style="color: rgb(100, 96, 96);">Dosen</div></a>
             <div class="dropdown-menu dropdown-menu-right">
-              <div class="dropdown-title">Logged in 5 min ago</div>
               <a href="features-profile.html" class="dropdown-item has-icon">
                 <i class="far fa-user"></i> Profile
               </a>
-              <a href="features-activities.html" class="dropdown-item has-icon">
-                <i class="fas fa-bolt"></i> Activities
-              </a>
-              <a href="features-settings.html" class="dropdown-item has-icon">
-                <i class="fas fa-cog"></i> Settings
-              </a>
+            
               <div class="dropdown-divider"></div>
-              <a href="#" class="dropdown-item has-icon text-danger">
+              <a href="#" id="btn-logout" class="dropdown-item has-icon text-danger">
                 <i class="fas fa-sign-out-alt"></i> Logout
               </a>
             </div>
@@ -166,7 +160,7 @@
   <script src="../../assets/js/custom.js"></script>
 
   <script src="../../assets/js/page/forms-advanced-forms.js"></script>
-
+  <script  type="text/javascript" src="../api/logout.js"></script>
 
   <!-- Page Specific JS File -->
 </body>
