--- a/frontend/authentication/login.html
+++ b/frontend/authentication/login.html
@@ -38,7 +38,7 @@ The above copyright notice and this permission notice shall be included in all c
         <div class="form-group">
           <div class=" input-group uf-input-group input-group-lg mb-3">
             <span class="input-group-text fa fa-user"></span>
-            <input type="text" class="form-control" id="username" name="username"placeholder="Username" required=""> 
+            <input type="text" class="form-control" id="username" name="username" placeholder="Username" required=""> 
             <div class="invalid-feedback">
               Username Salah
             </div>
@@ -68,12 +68,14 @@ The above copyright notice and this permission notice shall be included in all c
 
     <p id="responseMessage"></p>
     <!-- JavaScript -->
+    <script src="https://cdn.jsdelivr.net/npm/axios/dist/axios.min.js"></script>
+
     <script src="https://cdn.jsdelivr.net/npm/jquery@3.6.0/dist/jquery.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js" integrity="sha384-UO2eT0CpHqdSJQ6hJty5KVphtPhzWj9WO1clHTMGa3JDZwrnQq4sF86dIHNDz0W1" crossorigin="anonymous"></script>
     <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js" integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM" crossorigin="anonymous"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery.nicescroll/3.7.6/jquery.nicescroll.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/moment.js/2.24.0/moment.min.js"></script>
-    <script src="../assets/js/stisla.js"></script>
+    <script src="../../assets/js/stisla.js"></script>
     <!-- Separate Popper and Bootstrap JS -->
     <script src="../../assets/js/popper.min.js"></script>
     <script src="../../assets/js/bootstrap.min.js"></script>
@@ -84,8 +86,9 @@ The above copyright notice and this permission notice shall be included in all c
 
     <!-- TOAST -->
     <!-- axios  jsDelivr CDN-->
-    <script src="https://cdn.jsdelivr.net/npm/axios/dist/axios.min.js"></script>
+    <!-- <script src="https://unpkg.com/axios/dist/axios.min.js"></script> -->
+    <!-- <script src="https://cdn.jsdelivr.net/npm/axios/dist/axios.min.js"></script> -->
     <!--  -->
-    <script type="text/javascript" src="../api/authentication.js"></script>
+    <script type="module" src="../api/authentication.js"></script>
   </body>
 </html>
