--- a/frontend/dosen/index.html
+++ b/frontend/dosen/index.html
@@ -29,6 +29,8 @@
       <div class="navbar-bg"></div>
       <nav class="navbar navbar-expand-lg main-navbar">
         <form class="form-inline mr-auto">
+          <li><a href="#" data-toggle="sidebar" class="nav-link nav-link-lg"><i class="fas fa-bars"></i></a></li>
+
         </form>
         <ul class="navbar-nav navbar-right">
           <li class="dropdown"><a href="#" data-toggle="dropdown" class="nav-link dropdown-toggle nav-link-lg nav-link-user">
@@ -135,42 +137,7 @@
                         </thead>
                         <tbody>
                           <tr>
-                            <td>
-                              <div class="custom-checkbox custom-control">
-                                <input type="checkbox" data-checkboxes="mygroup" class="custom-control-input" id="checkbox-1">
-                                <label for="checkbox-1" class="custom-control-label">&nbsp;</label>
-                              </div>
-                            </td>
-                            <td>Mahasiswa STB</td>
-                            <td class="align-middle">
-                              224412341
-                            </td>
-                            <td>
-                              Nilai Mata Kuliah ESD Dibawah C 
-                            </td>
-                            <td>Dosen STB</td>
-                            <td>2018-01-20</td>
-                            <td><div class="badge badge-danger">Belum</div></td>
-                            <td><a href="detail-pengajuan.html" class="btn btn-secondary">Detail</a></td>
-                          </tr>
-                          <tr>
-                            <td>
-                              <div class="custom-checkbox custom-control">
-                                <input type="checkbox" data-checkboxes="mygroup" class="custom-control-input" id="checkbox-1">
-                                <label for="checkbox-1" class="custom-control-label">&nbsp;</label>
-                              </div>
-                            </td>
-                            <td>Mahasiswa STB KB</td>
-                            <td class="align-middle">
-                              224412341
-                            </td>
-                            <td>
-                              Nilai Mata Kuliah Praktek Kebidanan Dibawah C 
-                            </td>
-                            <td>Dosen STB KB</td>
-                            <td>2018-01-20</td>
-                            <td><div class="badge badge-danger">Belum</div></td>
-                            <td><a href="#" class="btn btn-secondary">Detail</a></td>
+                            <td>Belum Ada Data</td>
                           </tr>
                         </tbody>
                       </table>
