--- a/frontend/admin/detail-pengajuan.html
+++ b/frontend/admin/detail-pengajuan.html
@@ -22,6 +22,7 @@
       <div class="navbar-bg"></div>
       <nav class="navbar navbar-expand-lg main-navbar">
         <form class="form-inline mr-auto">
+          <li><a href="#" data-toggle="sidebar" class="nav-link nav-link-lg"><i class="fas fa-bars"></i></a></li>
         </form>
         <ul class="navbar-nav navbar-right">
           <li class="dropdown"><a href="#" data-toggle="dropdown" class="nav-link dropdown-toggle nav-link-lg nav-link-user">
@@ -91,14 +92,14 @@
                             <strong>Nama Mahasiswa:</strong>
                             <p id="nama-mahasiswa"></p>
                             <strong>Kategori:</strong>
-                            <p id="nama-mahasiswa"></p>
+                            <p id="kategori"></p>
                         </address>
                       </div>
                     </div>
                   </div>
                 </div>
 
-                <div class="row mt-4">
+                <!-- <div class="row mt-4">
                   <div class="col-md-12">
                     <div class="section-title">Isi Laporan</div>
                     <div>
@@ -106,7 +107,7 @@
                         <p>Selamat Siang pak saya izin ingin melaporkan hasil nilai ujian saya, nilai mata kuliah informatika saya , mohon bantuannya pak</p>
                     </div>
                   </div>
-                </div>
+                </div> -->
               </div>
               <hr>
               <div class="text-md-right">
