--- a/frontend/admin/index.html
+++ b/frontend/admin/index.html
@@ -27,6 +27,7 @@
       <div class="navbar-bg"></div>
       <nav class="navbar navbar-expand-lg main-navbar">
         <form class="form-inline mr-auto">
+          <li><a href="#" data-toggle="sidebar" class="nav-link nav-link-lg"><i class="fas fa-bars"></i></a></li>
         </form>
         <ul class="navbar-nav navbar-right">
           <li class="dropdown"><a href="#" data-toggle="dropdown" class="nav-link dropdown-toggle nav-link-lg nav-link-user">
@@ -54,7 +55,7 @@
             <a href="index.html">STB</a>
           </div>
           <ul class="sidebar-menu">
-            <li class="menu-header" style="font-size: 0.6rem;">Pengajuan Konseling Mahasiswa</li>
+            <li class="menu-header">Pengajuan Konseling Mahasiswa</li>
             <li><a class="nav-link" href="index.html"><i class="fas fa-square"></i> <span>Data</span></a></li>
               <!-- <li class="nav-item dropdown">
                 <a href="#" class="nav-link has-dropdown"><i class="fas fa-th"></i> <span>Konseling</span></a>
@@ -86,12 +87,11 @@
                   <div class="card-icon bg-primary">
                     <i class="far fa-user"></i>
                   </div>
-                  <div class="card-wrap">z
+                  <div class="card-wrap">
                     <div class="card-header">
-                      <h4>Laporan Mahasiswa</h4>
+                      <h4>Laporan Konseling</h4>
                     </div>
-                    <div class="card-body">
-                      2
+                    <div class="card-body" id="total-konseling">
                     </div>
                   </div>
                 </div>
@@ -106,7 +106,7 @@
                       <h4>Laporan Konseling Belum Di Proses</h4>
                     </div>
                     <div class="card-body">
-                      2
+                      1
                     </div>
                   </div>
                 </div>
@@ -116,7 +116,7 @@
                   <div class="card-body">
                     <ul class="nav nav-pills">
                       <li class="nav-item">
-                        <a class="nav-link active" href="#">Semua <span class="badge badge-white">2</span></a>
+                        <a class="nav-link active" href="#">Semua <span class="badge badge-white" id="badge-all"></span></a>
                       </li>
                       <!-- <li class="nav-item">
                         <a class="nav-link" href="#">Pending <span class="badge badge-primary">1</span></a>
@@ -199,5 +199,6 @@
   <script src="https://cdn.jsdelivr.net/npm/axios/dist/axios.min.js"></script>
   <script type="text/javascript" src="../api/konseling.js"></script>
   <script  type="text/javascript" src="../api/logout.js"></script>
+  
 </body>
 </html>
